<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- add this to your shell:
         export MAVEN_OPTS="-Xms256m -Xmx1g -XX:MaxPermSize=256m" -->

    <!-- when running tests from an intellij project that was setup
         via importing a project from maven, be sure to set the
         working directory to the top level htsjdk directory -->

    <groupId>org.broadinstitute</groupId>
    <artifactId>htsjdk</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>HTS JDK</name>

    <profiles>
        <profile>
            <id>DEV</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <keystore.location>examplestore</keystore.location>
                <keystore.alias>test</keystore.alias>
                <keystore.storepass>123456</keystore.storepass>
                <keystore.keypass>123456</keystore.keypass>
            </properties>
        </profile>
        <profile>
            <id>RELEASE</id>
            <!-- use "-D" params to specify keystore info on the command line
                 for the actual release -->
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <layout>default</layout>
            <url>http://repo1.maven.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.apache.ant</groupId>
            <artifactId>ant</artifactId>
            <version>1.8.2</version>
        </dependency>

        <dependency>
            <groupId>org.apache.bcel</groupId>
            <artifactId>bcel</artifactId>
            <version>5.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.java.contract</groupId>
            <artifactId>cofoja</artifactId>
            <!-- must be installed to local repo manually from command line like so:
             mvn install:install-file -Dfile=lib/cofoja/cofoja-1.0-r139.jar -DgroupId=com.google.java.contract -DartifactId=cofoja -Dversion=1.0-r139 -Dpackaging=jar -->
            <version>1.0-r139</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-jexl</artifactId>
            <version>2.1.1</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.xerial.snappy</groupId>
            <artifactId>snappy-java</artifactId>
            <version>1.0.3-rc3</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <!-- was 5.5; this was failing to compile with maven-->
            <version>6.8.8</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

    <build>
        <sourceDirectory>src/java</sourceDirectory>
        <testSourceDirectory>src/tests/java</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifestEntries>
                            <Implementation-Vendor>${project.groupId}</Implementation-Vendor>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <!-- not sure if this plays nice with cofoja but the build fails without it,
                     complaining about cofoja "error in contract"-->
                    <compilerArgument>-proc:none</compilerArgument>
                    <debug>true</debug>
                    <optimize>false</optimize>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <version>1.3.2</version>
                <executions>
                    <execution>
                        <id>sign</id>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!--generated via: keytool -genkey -alias test -keystore examplestore -->
                    <keystore>${keystore.location}</keystore>
                    <alias>${keystore.alias}</alias>
                    <!-- should probably encrypt the passwords in the real production version -->
                    <storepass>${keystore.storepass}</storepass>
                    <keypass>${keystore.keypass}</keypass>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.17</version>
                <configuration>
                    <!-- without bumping up memory, maven tests fail -->
                    <argLine>-Xms256m -Xmx1g -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>


    </build>
</project>